@@ -19,7 +19,7 @@
 }
 
 .des-pro-but-cover{
-    padding: 8vh 14vw 2vh;
+    padding: 5vh 14vw 2vh;
     display: flex;
     justify-content:flex-end;
 }
